<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:padding="12dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="48sp"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/firstEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="first number"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/secondEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="second number"
        android:textSize="30sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Calculator"
        android:id="@+id/btnCalculator"
        android:textSize="30sp"/>

</LinearLayout>